Add sharing settings

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,15 @@
       name="Nifty.rip"
       content="NFTs forever lost to the ether."
     />
+
+    <!-- Social Sharing-->
+    <meta property="og:title" content="Nifty.rip" />
+    <meta property="og:description" content="NFTs forever lost to the ether" />
+    <meta property="og:url" content="https://nifty.rip" />
+    <meta property="og:image" content="%PUBLIC_URL%/logo512.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
