Switch settings to be unique to project

--- a/public/index.html
+++ b/public/index.html
@@ -7,20 +7,20 @@
           new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
         j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-WXSDHF4');</script>
+    })(window,document,'script','dataLayer','GTM-KGM3WZQ');</script>
     <!-- End Google Tag Manager -->
 
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="Nifty.rip"
-      content="NFTs forever lost to the ether."
+      name="My Nifty Gallery"
+      content="View your NFTs in this unique 3D gallery"
     />
 
     <!-- Social Sharing-->
-    <meta property="og:title" content="Nifty.rip" />
-    <meta property="og:description" content="NFTs forever lost to the ether" />
+    <meta property="og:title" content="My Nifty Gallery" />
+    <meta property="og:description" content="View your NFTs in this unique 3D gallery" />
     <meta property="og:url" content="https://nifty.rip" />
     <meta property="og:image" content="%PUBLIC_URL%/logo512.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
@@ -41,11 +41,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Nifty.rip</title>
+    <title>My Nifty Gallery</title>
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WXSDHF4"
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KGM3WZQ"
                       height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
