--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="My Nifty Gallery"
+      name="description"
       content="View your NFTs in this unique 3D gallery"
     />
 
